--- a/index.html
+++ b/index.html
@@ -1,17 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Demon Slayer</title>
 
 	<meta property="og:type" content="article">
-	<meta property="og:title" content="Kevin Carvajal te ha invitado a ver una pelicula">
+	<meta property="og:title" content="Alguien te ha invitado a ver una pelicula">
 	<meta property="og:description" content="Entra ahora para ver Demon Slayer: Mugen Train"> 
 	<meta property="og:image" content="https://i.blogs.es/c9d462/demon-slayer-llega-a-mexico/450_1000.jpg">
+
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	
+	<div>
+		<p class="paywall">Una persona te invito a ver esto</p>
+		<p>XD</p>
+	</div>
+	<!-- <div class="paywall">
+		
+	</div> -->
+
+	<button class="geoBtn"></button>
+	<script src="./main.js"></script>
 </body>
 </html>
